--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-slider": "^1.3.1",
     "sass": "^1.49.9"
   },
