--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-slider": "^1.3.1",
+    "react-svg": "^14.1.17",
     "sass": "^1.49.9"
   },
   "devDependencies": {
